Agregar pruebas unitarias e implementacion de JaCoCo