@@ -4,7 +4,10 @@ import com.tulipan.ordersapp.customers.domain.exceptions.CustomerNotFoundExcepti
 import com.tulipan.ordersapp.customers.domain.model.Customer;
 import com.tulipan.ordersapp.customers.domain.service.CustomerService;
 import com.tulipan.ordersapp.customers.infrastructure.dto.CustomerDTO;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -13,6 +16,8 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/customers")
@@ -24,29 +29,40 @@ public class CustomerController {
     }
 
     @PostMapping
-    public CustomerDTO createCustomer(@RequestBody Customer customer) {
-        return toDTO(customerService.save(customer));
+    public ResponseEntity<CustomerDTO> createCustomer(@RequestBody Customer customer) {
+        Customer savedCustomer = customerService.save(customer);
+        return ResponseEntity.status(HttpStatus.CREATED).body(toDTO(savedCustomer));
     }
 
     @GetMapping("/{id}")
-    public CustomerDTO getCustomerById(@PathVariable Long id) {
-        return toDTO(customerService.findById(id).orElseThrow(() -> new CustomerNotFoundException(id)));
+    public ResponseEntity<CustomerDTO> getCustomerById(@PathVariable Long id) {
+        Customer customer = customerService.findById(id)
+            .orElseThrow(() -> new CustomerNotFoundException(id));
+        return new ResponseEntity<>(toDTO(customer), HttpStatus.OK);
     }
 
     @GetMapping
-    public Iterable<CustomerDTO> getAllCustomers() {
-        return customerService.findAll().stream().map(this::toDTO).toList();
+    public ResponseEntity<List<CustomerDTO>> getAllCustomers() {
+        List<CustomerDTO> customers = customerService.findAll().stream()
+            .map(this::toDTO)
+            .collect(Collectors.toList());
+        return ResponseEntity.ok(customers);
     }
 
     @PutMapping("/{id}")
-    public Customer updateCustomer(@PathVariable Long id, @RequestBody CustomerDTO customer) {
+    public ResponseEntity<CustomerDTO> updateCustomer(@PathVariable Long id, @RequestBody CustomerDTO customerDTO) {
+        Customer customer = toModel(customerDTO);
         customer.setId(id);
-        return customerService.update(toModel(customer));
+        Customer updatedCustomer = customerService.update(customer);
+        return ResponseEntity.ok(toDTO(updatedCustomer));
     }
 
     @DeleteMapping("/{id}")
-    public void deleteCustomer(@PathVariable Long id) {
-        customerService.deleteById(id);
+    public ResponseEntity<Void> deleteCustomer(@PathVariable Long id) {
+        Customer customer = customerService.findById(id)
+            .orElseThrow(() -> new CustomerNotFoundException(id));
+        customerService.delete(customer);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
     private Customer toModel(CustomerDTO dto) {
@@ -71,5 +87,10 @@ public class CustomerController {
         dto.setEmail(customer.getEmail());
         dto.setNote(customer.getNote());
         return dto;
+    }
+
+    @ExceptionHandler(CustomerNotFoundException.class)
+    public ResponseEntity<String> handleCustomerNotFoundException(CustomerNotFoundException ex) {
+        return new ResponseEntity<>(ex.getMessage(), HttpStatus.NOT_FOUND);
     }
 }
